# ModernCppStarter

./: .gitignore  CMakeLists.txt
source/: main.cpp
